--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="https://github.com/Hkc1673/Clarusway_python_assignment">Python Assignment</a></li>
                 <li><a href="https://hkc1673.github.io/Google_Landing_Page_Project/">Google Landing Page Project</a></li>
                 <li><a href="https://hkc1673.github.io/Netflix_Survey_Form_Project/">Netflix Survey Form Project</a></li>
-                <li><a href="https://github.com/Hkc1673/FullStack-Projects">Clarusway Survey Form</a></li>
+                <li><a href="https://hkc1673.github.io/Clarusway-Survey-Form-/">Clarusway Survey Form</a></li>
                 <li><a href="https://hkc1673.github.io/Sass-Project/">Sass Project</a></li>
             </ul>
         </li>
