--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="https://hkc1673.github.io/Netflix_Survey_Form_Project/">Netflix Survey Form Project</a></li>
                 <li><a href="https://hkc1673.github.io/Clarusway-Survey-Form-/">Clarusway Survey Form</a></li>
                 <li><a href="https://hkc1673.github.io/Sass-Project/">Sass Project</a></li>
+                <li><a href="#">Parallax Website Project</a></li>
             </ul>
         </li>
         <li><a class="active" href="https://github.com/Hkc1673">Profile</a></li>
