--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="https://hkc1673.github.io/Netflix_Survey_Form_Project/">Netflix Survey Form Project</a></li>
                 <li><a href="https://hkc1673.github.io/Sass-Project/">Sass Project</a></li>
                 <li><a href="https://hkc1673.github.io/Parallax_Website_Project/.">Parallax Website Project</a></li>
+                <li><a href="https://hkc1673.github.io/Parallax_Website_Project/.">Web Site Page Design Project</a></li>
             </ul>
         </li>
         
@@ -36,7 +37,7 @@
     <footer>
 
       <div><a href="https://twitter.com/HabibKo71">Twitter</a></div>
-      <div><a href="">Linkedin</a></div>   <!--I will add when I create Linkedin profile-->
+      <div><a href="https://linkedin.com/in/habib-koç-4763281b7">Linkedin</a></div>
 
     </footer>
   </body>
