Add visual clock

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              
               <li><a href="https://hkc1673.github.io/Clarusway-Survey-Form-/">Clarusway Survey Form</a></li>
               <li><a href="https://hkc1673.github.io/Team_Member_Page_Project/.">Team Member Page</a></li>
-              <li><a href="#">Clock</a></li>
+              <li><a href="https://hkc1673.github.io/Visual_Clock/.">Visual Clock</a></li>
               
           </ul>
         </li>
