--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="#">Javascript Projects<i class="fas fa-caret-down"></i></a>
           <ul>
              
-              <li><a href="#">Calculator</a></li>
+              <li><a href="https://hkc1673.github.io/Calculator/.">Calculator</a></li>
               <li><a href="https://hkc1673.github.io/Guess_Number_Game/">Guess Number Game</a></li>
               
           </ul>
