--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
              
               <li><a href="https://hkc1673.github.io/Calculator/.">Calculator</a></li>
               <li><a href="https://hkc1673.github.io/Guess_Number_Game/">Guess Number Game</a></li>
+              <li><a href="">Menu List</a></li>
               
           </ul>
         </li>
