Added new medium URL

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <div><a href="https://twitter.com/HabibKo71">Twitter</a></div>
       <div><a href="https://linkedin.com/in/habib-koç-4763281b7">Linkedin</a></div>
-      <div><a href="https://medium.com/@habibkc71">Medium</a></div>
+      <div><a href="https://habibkc71.medium.com/">Medium</a></div>
 
     </footer>
   </body>
