Added gmail clone project link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <li><a href="https://github.com/Hkc1673?tab=repositories">Project Repositories<i class="fas fa-caret-down"></i></a>
             <ul>
-                <li><a href="https://github.com/Hkc1673/Clarusway_python_assignment">Python Assignment</a></li>
+                <li><a href="https://clone-react-9a0d2.web.app/">Gmail Clone</a></li>
                 <li><a href="https://hkc1673.github.io/Google_Landing_Page_Project/">Google Landing Page Project</a></li>
                 <li><a href="https://hkc1673.github.io/Netflix_Survey_Form_Project/">Netflix Survey Form Project</a></li>
                 <li><a href="https://hkc1673.github.io/Sass-Project/">Sass Project</a></li>
